--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 <h1 align="center">Hey! I am XKaliber! <span class="wave">👋</span></h1> 
-<img src="https://image.myanimelist.net/ui/5LYzTBVoS196gvYvw3zjwMxkYwnKDPQN8_K6UQUswLM" align="center" width="100%" />
+<img src="https://image.myanimelist.net/ui/5LYzTBVoS196gvYvw3zjwMxkYwnKDPQN8_K6UQUswLM" align="center"/>
 
 <h1 align="center">A little bit about myself</h1>
 
